working variant product price section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en" data-theme="cupcake">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/image/logo.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://res.cloudinary.com/drwk9xxrx/image/upload/v1754118027/pinwheel/y9u1unviwaqr2hbxp7xi.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cartout</title>
   </head>
@@ -11,3 +15,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+9
